updated notebook to include a name for citylimits

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,35 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Victoria\\\\Desktop\\\\THESIS\\\\Analysis\\\\gitproject\\\\park-equity-atx\\\\notebooks'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acl = geopandas.read_file(\"C:/Users/Victoria/Desktop/THESIS/Analysis/gitproject/park-equity-atx/data/citylimits/citylimits.shp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -77,33 +106,13 @@
        "0  POLYGON ((3086815.032605638 10026999.74263538,...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "geopandas.read_file(\"C:/Users/Victoria/Desktop/THESIS/Analysis/gitproject/park-equity-atx/data/citylimits/citylimits.shp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\Victoria\\\\Desktop\\\\THESIS\\\\Analysis\\\\gitproject\\\\park-equity-atx\\\\notebooks'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
+    "acl"
    ]
   },
   {
