added title and changed notebook name

--- a/notebooks/CensusBlockIntersectionCityLimits.ipynb
+++ b/notebooks/CensusBlockIntersectionCityLimits.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#This notenook will use the intersection tool to select the census block we are interested in viewing by using the Austin City Limits full jurisdiction shapefile as our boundary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \n",
+    "\n",
     "We want to import censusblocks shp and overlay on the ACL shp data. \n",
     "\n",
     "* take census block and census excel data and combine them. \n",
@@ -1001,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
