--- a/notebooks/CensusFileMerge.ipynb
+++ b/notebooks/CensusFileMerge.ipynb
@@ -631,6 +631,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Super Heading\n",
+    "## Heading\n",
+    "### subheading\n",
+    "words<br>stuff"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
