landuse back to fixed buffers

--- a/notebooks/ParkServiceArea.ipynb
+++ b/notebooks/ParkServiceArea.ipynb
@@ -72,9 +72,9 @@
    "source": [
     "# Creation of buffers of for 1/4 mile (400 meters) and 1/2 a mile (800 meters)\n",
     "\n",
-    "# coaparks_quarter = coaparks.buffer(400)\n",
-    "# coaparks_half = coaparks.buffer(800)\n",
-    "\n",
+    "coaparks_quarter = coaparks.buffer(400)\n",
+    "coaparks_half = coaparks.buffer(800)\n",
+    "'''\n",
     "#This is some code to convert the buffer into a proportion. This should change when we get\n",
     "# Land use data. This was small enough to apply buffer rowwise. Could be made more efficiently\n",
     "# in the future. \n",
@@ -87,7 +87,8 @@
     "#for row in coaparks['geometry']:\n",
     "for row in coaparks['geometry']:\n",
     "    print(row.index)\n",
-    "coaparks['geometry'].head()"
+    "coaparks['geometry'].head()\n",
+    "'''"
    ]
   },
   {
