not sure what I added

--- a/notebooks/4) Getting Land Use Data.ipynb
+++ b/notebooks/4) Getting Land Use Data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,11 +21,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acl = gpd.read_file(wd+'data/citylimits/citylimits.shp')\n",
+    "acl.crs = {'init': 'epsg:102739'}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "acl = gpd.read_file(wd+'data/citylimits/citylimits.shp')"
+    "#councilbound = gpd.read_file('https://data.austintexas.gov/api/geospatial/7sg9-qjmi?method=export&format=GeoJSON')\n",
+    "#councilbound['city'] = 'Austin'"
    ]
   },
   {
@@ -34,298 +45,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "councilbound = gpd.read_file('https://data.austintexas.gov/api/geospatial/7sg9-qjmi?method=export&format=GeoJSON')\n",
-    "councilbound['city'] = 'Austin'"
+    "#councilbound"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>created_by</th>\n",
-       "      <th>modified_b</th>\n",
-       "      <th>shape_area</th>\n",
-       "      <th>time_creat</th>\n",
-       "      <th>label</th>\n",
-       "      <th>council_di_1</th>\n",
-       "      <th>date_modif</th>\n",
-       "      <th>single_mem</th>\n",
-       "      <th>objectid</th>\n",
-       "      <th>shape_leng</th>\n",
-       "      <th>council_di</th>\n",
-       "      <th>date_creat</th>\n",
-       "      <th>time_modif</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>lockwoodg</td>\n",
-       "      <td>502791106.3125</td>\n",
-       "      <td>11:00:25</td>\n",
-       "      <td>Council District 3</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-3</td>\n",
-       "      <td>2016-10-18T00:00:00</td>\n",
-       "      <td>400378072.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>153982.266646917</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>13:41:59</td>\n",
-       "      <td>(POLYGON ((-97.680452610835 30.267642217703, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>lockwoodg</td>\n",
-       "      <td>330875387.833984</td>\n",
-       "      <td>11:00:26</td>\n",
-       "      <td>Council District 4</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-4</td>\n",
-       "      <td>2016-10-18T00:00:00</td>\n",
-       "      <td>400378084.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>105092.713667442</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>13:42:05</td>\n",
-       "      <td>(POLYGON ((-97.70834462297 30.392488241669, -9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>lockwoodg</td>\n",
-       "      <td>1290119786.29297</td>\n",
-       "      <td>11:00:26</td>\n",
-       "      <td>Council District 2</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-2</td>\n",
-       "      <td>2016-10-18T00:00:00</td>\n",
-       "      <td>400378076.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>689873.424949491</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>13:41:55</td>\n",
-       "      <td>(POLYGON ((-97.718093991782 30.184857710517, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>671906365.71875</td>\n",
-       "      <td>11:00:25</td>\n",
-       "      <td>Council District 5</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-5</td>\n",
-       "      <td>2018-03-30T00:00:00</td>\n",
-       "      <td>400378068.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>343441.587182973</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>16:36:17</td>\n",
-       "      <td>(POLYGON ((-97.79137132583099 30.093084953282,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>lockwoodg</td>\n",
-       "      <td>782496369.109375</td>\n",
-       "      <td>11:00:26</td>\n",
-       "      <td>Council District 7</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-7</td>\n",
-       "      <td>2016-10-18T00:00:00</td>\n",
-       "      <td>400378082.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>285527.935326997</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>13:42:22</td>\n",
-       "      <td>(POLYGON ((-97.672794208708 30.47004430715, -9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>lockwoodg</td>\n",
-       "      <td>348217049.759766</td>\n",
-       "      <td>11:00:26</td>\n",
-       "      <td>Council District 9</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-9</td>\n",
-       "      <td>2016-10-18T00:00:00</td>\n",
-       "      <td>400378086.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>135780.245549962</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>13:42:32</td>\n",
-       "      <td>(POLYGON ((-97.731632625359 30.317929225339, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>lockwoodg</td>\n",
-       "      <td>1259874107.7793</td>\n",
-       "      <td>11:00:25</td>\n",
-       "      <td>Council District 8</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-8</td>\n",
-       "      <td>2016-10-18T00:00:00</td>\n",
-       "      <td>400378070.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>500265.199040691</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>13:42:28</td>\n",
-       "      <td>(POLYGON ((-97.810965640642 30.234162207107, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>lockwoodg</td>\n",
-       "      <td>1201125484.6582</td>\n",
-       "      <td>11:00:26</td>\n",
-       "      <td>Council District 10</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-10</td>\n",
-       "      <td>2016-10-18T00:00:00</td>\n",
-       "      <td>400378078.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>441148.007112607</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>13:42:37</td>\n",
-       "      <td>(POLYGON ((-97.76848364074 30.432543246603, -9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>1395148093.93555</td>\n",
-       "      <td>11:00:26</td>\n",
-       "      <td>Council District 6</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-6</td>\n",
-       "      <td>2018-02-15T00:00:00</td>\n",
-       "      <td>400378080.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>724879.073135687</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>10:47:17</td>\n",
-       "      <td>(POLYGON ((-97.693431426141 30.463674793809, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>meekss</td>\n",
-       "      <td>1322341605.34375</td>\n",
-       "      <td>11:00:25</td>\n",
-       "      <td>Council District 1</td>\n",
-       "      <td>http://www.austintexas.gov/department/district-1</td>\n",
-       "      <td>2018-02-14T00:00:00</td>\n",
-       "      <td>400378074.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>612919.70901637</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2018-06-14T00:00:00</td>\n",
-       "      <td>18:19:26</td>\n",
-       "      <td>(POLYGON ((-97.528330517331 30.273653160014, -...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  created_by modified_b        shape_area time_creat                label  \\\n",
-       "0     meekss  lockwoodg    502791106.3125   11:00:25   Council District 3   \n",
-       "1     meekss  lockwoodg  330875387.833984   11:00:26   Council District 4   \n",
-       "2     meekss  lockwoodg  1290119786.29297   11:00:26   Council District 2   \n",
-       "3     meekss     meekss   671906365.71875   11:00:25   Council District 5   \n",
-       "4     meekss  lockwoodg  782496369.109375   11:00:26   Council District 7   \n",
-       "5     meekss  lockwoodg  348217049.759766   11:00:26   Council District 9   \n",
-       "6     meekss  lockwoodg   1259874107.7793   11:00:25   Council District 8   \n",
-       "7     meekss  lockwoodg   1201125484.6582   11:00:26  Council District 10   \n",
-       "8     meekss     meekss  1395148093.93555   11:00:26   Council District 6   \n",
-       "9     meekss     meekss  1322341605.34375   11:00:25   Council District 1   \n",
-       "\n",
-       "                                        council_di_1           date_modif  \\\n",
-       "0   http://www.austintexas.gov/department/district-3  2016-10-18T00:00:00   \n",
-       "1   http://www.austintexas.gov/department/district-4  2016-10-18T00:00:00   \n",
-       "2   http://www.austintexas.gov/department/district-2  2016-10-18T00:00:00   \n",
-       "3   http://www.austintexas.gov/department/district-5  2018-03-30T00:00:00   \n",
-       "4   http://www.austintexas.gov/department/district-7  2016-10-18T00:00:00   \n",
-       "5   http://www.austintexas.gov/department/district-9  2016-10-18T00:00:00   \n",
-       "6   http://www.austintexas.gov/department/district-8  2016-10-18T00:00:00   \n",
-       "7  http://www.austintexas.gov/department/district-10  2016-10-18T00:00:00   \n",
-       "8   http://www.austintexas.gov/department/district-6  2018-02-15T00:00:00   \n",
-       "9   http://www.austintexas.gov/department/district-1  2018-02-14T00:00:00   \n",
-       "\n",
-       "    single_mem objectid        shape_leng council_di           date_creat  \\\n",
-       "0  400378072.0      1.0  153982.266646917        3.0  2018-06-14T00:00:00   \n",
-       "1  400378084.0      3.0  105092.713667442        4.0  2018-06-14T00:00:00   \n",
-       "2  400378076.0      2.0  689873.424949491        2.0  2018-06-14T00:00:00   \n",
-       "3  400378068.0      8.0  343441.587182973        5.0  2018-06-14T00:00:00   \n",
-       "4  400378082.0      9.0  285527.935326997        7.0  2018-06-14T00:00:00   \n",
-       "5  400378086.0      4.0  135780.245549962        9.0  2018-06-14T00:00:00   \n",
-       "6  400378070.0      6.0  500265.199040691        8.0  2018-06-14T00:00:00   \n",
-       "7  400378078.0      5.0  441148.007112607       10.0  2018-06-14T00:00:00   \n",
-       "8  400378080.0      7.0  724879.073135687        6.0  2018-06-14T00:00:00   \n",
-       "9  400378074.0     10.0   612919.70901637        1.0  2018-06-14T00:00:00   \n",
-       "\n",
-       "  time_modif                                           geometry  \n",
-       "0   13:41:59  (POLYGON ((-97.680452610835 30.267642217703, -...  \n",
-       "1   13:42:05  (POLYGON ((-97.70834462297 30.392488241669, -9...  \n",
-       "2   13:41:55  (POLYGON ((-97.718093991782 30.184857710517, -...  \n",
-       "3   16:36:17  (POLYGON ((-97.79137132583099 30.093084953282,...  \n",
-       "4   13:42:22  (POLYGON ((-97.672794208708 30.47004430715, -9...  \n",
-       "5   13:42:32  (POLYGON ((-97.731632625359 30.317929225339, -...  \n",
-       "6   13:42:28  (POLYGON ((-97.810965640642 30.234162207107, -...  \n",
-       "7   13:42:37  (POLYGON ((-97.76848364074 30.432543246603, -9...  \n",
-       "8   10:47:17  (POLYGON ((-97.693431426141 30.463674793809, -...  \n",
-       "9   18:19:26  (POLYGON ((-97.528330517331 30.273653160014, -...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "councilbound"
+    "landuse = gpd.read_file('https://data.austintexas.gov/api/geospatial/nuca-fzpt?method=export&format=GeoJSON')\n",
+    "landuse.crs = {'init': 'epsg:102739'}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "landuse = gpd.read_file('https://data.austintexas.gov/api/geospatial/nuca-fzpt?method=export&format=GeoJSON')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +459,7 @@
        "[265420 rows x 64 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,17 +474,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aus_landuse = gpd.overlay(landuse, council_districts.dissolve(by='city'), how='intersection')\n",
-    "aus_landuse"
+    "#aus_landuse = gpd.overlay(landuse, council_districts.dissolve(by='city'), how='intersection')\n",
+    "#aus_landuse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "acllu = gpd.overlay(landuse, acl, how='intersection')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>block</th>\n",
+       "      <th>coa_taxabl</th>\n",
+       "      <th>i35_side</th>\n",
+       "      <th>lotsize</th>\n",
+       "      <th>entities</th>\n",
+       "      <th>total_land</th>\n",
+       "      <th>market_val</th>\n",
+       "      <th>imprv_hstd</th>\n",
+       "      <th>ilr</th>\n",
+       "      <th>land_hstd</th>\n",
+       "      <th>...</th>\n",
+       "      <th>legal_de_1</th>\n",
+       "      <th>dba</th>\n",
+       "      <th>gislink</th>\n",
+       "      <th>hs_exempt</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>units</th>\n",
+       "      <th>jurisdic_1</th>\n",
+       "      <th>constraine</th>\n",
+       "      <th>imprv_non</th>\n",
+       "      <th>owner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 71 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty GeoDataFrame\n",
+       "Columns: [block, coa_taxabl, i35_side, lotsize, entities, total_land, market_val, imprv_hstd, ilr, land_hstd, propval_yr, ag_use_val, gen_lu_des, land_state, jurisdic_2, appraised, cnt_gislin, prop_id, previouslu, hood_cd, assessed_v, jurisdicti, lu_desc, eff_zone, sum_imprv, abs_subdv, jurisdic_3, py_owner_i, imprv_type, pid_10, ten_percen, source, ag_market, city_name, land_use, legal_desc, objectid, travis_tax, land_non_h, shape_area, total_imp, ov65_exemp, modified_f, shape_leng, tract_or_l, basezone, previousge, notes, gen_land_u, prop_type, sup_num, yr_built, council_di, situs, depreciati, land_acres, far, condoid, imprv_tyde, imprv_stat, deed_dt, legal_de_1, dba, gislink, hs_exempt, geometry, units, jurisdic_1, constraine, imprv_non, owner]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 71 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acllu"
    ]
   },
   {
