--- a/notebooks/3) ParkServiceArea.ipynb
+++ b/notebooks/3) ParkServiceArea.ipynb
@@ -406,7 +406,7 @@
     "coaparks = gpd.read_file(wd+\"data/coaparks/BOUNDARIES_city_of_austin_parks.shp\")\n",
     "coaparks.crs = {'init': 'epsg:102739'}\n",
     "coaparks\n",
-    "# nature preserves are not for recreation\n",
+    "\n",
     "# Separate these before hand! \n",
     "coaparks.head(10)"
    ]
@@ -471,6 +471,7 @@
     "num_metro=0\n",
     "num_schools = 0\n",
     "num_cem=0\n",
+    "num_perserve = 0\n",
     "\n",
     "for row in coaparks_vari['ASSET_SIZE'].index:\n",
     "    if coaparks_vari['ASSET_SIZE'][row] < 2:\n",
@@ -497,7 +498,9 @@
     "        # by five \n",
     "        coaparks_vari['geometry'].loc[row] = coaparks['geometry'].loc[row].buffer(4000)\n",
     "        num_greenbelt +=1\n",
-    "        \n",
+    "    if 'Preserve' in coaparks['LOCATION_N'][row]:\n",
+    "        coaparks_var['geometry'].loc[row] = coaparks['geometry'].loc[row].buffer(1600)\n",
+    "        num_preserve +=1\n",
     "    if 'School' in coaparks['LOCATION_N'][row]:\n",
     "        # School parks are not buffered, set them back to original poly. \n",
     "        coaparks_vari['geometry'].loc[row] = coaparks['geometry'].loc[row]\n",
