--- a/notebooks/4) Getting Land Use Data.ipynb
+++ b/notebooks/4) Getting Land Use Data.ipynb
@@ -1218,9 +1218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "park_env",
    "language": "python",
-   "name": "python3"
+   "name": "park_env"
   },
   "language_info": {
    "codemirror_mode": {
